fix images and text alignment

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
-    text-align: center;
+    text-align: left;
     color: black;
-    margin-top: 05px;
+    
 }
 header{
     background-color: black;
@@ -12,4 +12,8 @@ Footer{
     background-color: black;
     color: antiquewhite;
     text-align: center;
+}
+H1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: black;
 }
